<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fontFamily="@style/AppCondTheme" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E8E8E8"
	android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dip"
        android:layout_centerInParent="true" >
    
    <EditText android:id="@+id/userName"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/name"
        android:inputType="text" />
    
    <EditText android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/password"
        android:inputType="textPassword" /> 
    
    <EditText android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress" /> 
			  
    <Button android:id="@+id/signUp"
        android:textColor="#fff"
	    android:textStyle="bold"
	    android:background="#990100"
	    android:layout_marginTop="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/sign_up" />
    
    </RelativeLayout>
</RelativeLayout>