<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fontFamily="@style/AppCondTheme" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/c2"
	android:orientation="vertical">
	
    <RelativeLayout android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:paddingBottom="20dip">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

	</RelativeLayout>
	
    <RelativeLayout android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dip"
        android:layout_centerInParent="true" >
    
    <EditText android:id="@+id/userName"
		android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/username"
        android:inputType="text" />
    
    <EditText android:id="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:maxLength="10"
        android:clickable="true"
        android:singleLine="true"
        android:hint="@string/password"
        android:inputType="textPassword" /> 
			  
    <Button android:id="@+id/login"

		android:textColor="#fff"
	    android:textStyle="bold"
	    android:background="#36802D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dip"
        android:text="@string/login" />
    </RelativeLayout>

    <RelativeLayout android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_below="@id/content">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#dfe0df"
        android:text="@string/company"
        android:textSize="12sp"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</RelativeLayout>